fix: prevent text overflowing container

--- a/packages/web-components/src/components/va-accordion/va-accordion-item.css
+++ b/packages/web-components/src/components/va-accordion/va-accordion-item.css
@@ -61,8 +61,7 @@ button:hover {
   border-left: var(--item-border);
   border-right: var(--item-border);
   border-bottom: var(--item-border);
-  display: flex;
-  flex-wrap: wrap;
+  overflow-wrap: break-word;
 }
 
 button[aria-expanded='false'] {
@@ -73,7 +72,6 @@ p {
   font-weight: 400;
   line-height: 26px;
   margin: 0;
-  width: 100%;
 }
 
 /* Hiding since element would be duplicated via the Shadow DOM */
